# distributed_dashboard

./: .gitignore  .helmignore  Cargo.toml  Chart.yaml  Dockerfile  README.md
public/: index.html  index.js  styles.css
src/: cleanup.rs  cli.rs  clients.rs  config.rs  cpu_monitor.rs  db.rs  main.rs  proxy.rs  utils.rs  warp_server.rs  websocket_client.rs  websocket_server.rs
templates/: deployment.yaml  service.yaml
