[package]
name = "distributed_dashboard"
version = "0.1.0"
edition = "2021"

[[bin]]
edition = "2021"
name = "distributed_dashboard"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
ctrlc = "3.4.5"
dotenv = "0.15.0"
futures-util = "0.3.31"
once_cell = "1.20.2"
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
reqwest = { version = "0.12.9", features = ["json"] }
rusqlite = "0.32.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sysinfo = "0.32.0"
tokio = { version = "1.41.0", features = ["full"] }
tokio-stream = "0.1.16"
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
url = "2.5.3"
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
warp = "0.3.7"
